# MiastoX

./: .darklua.json  .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .selene.toml  .welcome.conf  404.html  AGENTS.md  AyaChapter.rbxl  CHANGELOG.md  Cargo.toml  Gemfile  Index.md  LICENSE  MiastoX-Final.rbxl  MiastoX-Rojo.rbxl  README.md  TODO.golog  Untitled-1.txt  Untitled-1d2.md  Untitled-2.txt  Untitled-3d2.txt  _config.yml  about.md  aftman.toml  ayachapter_modified.rbxl  build.project.json  build.rs  changelog.html  citix.toml  config.toml  contact.html  data.s  deSerialize.lua  default.project.json  dev.project.json  donation.html  followup.html  (+31 more)
.cargo/: config.toml
.circleci/: config.yml
.github/: release.yml
.github/workflows/: ci.yml  deploy-website.yml  deploy.yml  deploy_prod.yaml  deploy_staging.yaml  easy.yml  game-deploy.yml  go.yml  hugo.yml  jekyll-gh-pages.yml  lua-lint.yml  publish_game.yml  release.yml  roblox-ci.yml  roblox-ci.yml.yml  rust.yml  web-deploy.yml
.lune/: build-lune.luau  build.luau  format.luau  lint.luau
_jobs/: builder.md  developer.md  helper.md  moderator.md
_layouts/: default.html  job-listing.html
api/: ranks.json
assets/: city_map.json
assets/js/: tree.js
cmd/game/cityx/: Cargo.toml  CityX.config.lua  Miastox.config.lua  README.md  Twitche.config.lua  aftman.toml  cityx.yml  default.project.json  nowy 1.txt  rokit.toml  sandbox.luau  settings.json.txt
scripts/: auto_commit_and_push.sh  build.sh  deploy.sh  dev.sh  generate_city_map.sh  generate_city_map_from_schematics.py  release.sh  setup.sh
src/: AyaChapter.rbxl  lib.rs  lune-build.luau  main.rs
src/ReplicatedFirst/: ClientLoader.server.lua  Generator.client.luau  Initialize.client.luau
src/ServerScriptService/: ServerController.server.luau
src/StarterCharacterScripts/: CharacterController.client.luau
src/StarterPlayerScripts/: PlayerController.client.luau
src/citix/: mod.rs
src/cityx-backend/: main.rs
src/cityx-client/: main.rs
src/cityx-core/: main.rs
src/cityx-renderer/: main.rs
src/cityx-server/: main.rs
src/client/: clientfirst.lua  init.client.luau
src/decoded/: decode.go  decoded.rs
src/encoded/: encoded.go  encoded.rs
src/game/: main.rs  mod.rs
src/server/: LevelManager.server.luau  init.server.luau
styles/: main.css
website/: changelog.html  hierarchy.html  index.html  jobs.html
website/api/: changelog.json  ranks.json  status.json
website/css/: style.css
website/js/: main.js
(+17 files in other folders)
