[package]
name = "MiastoX"
version = "0.1.0"
edition = "2021"
description = "Projekt gry MiastoX oparty na frameworku Cityx i Rust, obsługujący integrację z .rbxl"
authors = ["Whitekali"]
license = "ISC"
repository = "https://github.com/Dawju9/MiastoX"
build = "build.rs"

[dependencies]
go = "0.0.1"
link = "0.1.1"
lune = "0.8.9"
promise = "0.0.4"
rojo = "7.4.4"
rokit = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
stylua = "0.20.0"
wally = "0.3.2"
tokio = "1"
built = "0.7"

[dev-dependencies]
# Zależności tylko dla testów i automatyzacji
wally = "0.3.2"
tokio = { version = "1", features = ["full"] }
[build-dependencies]
built = "0.7"

[game]
citix_config_path = "citix.toml"

[lib]
name = "MiastoX"
path = "src/lib.rs"
test = true

[[bin]]
name = "MiastoX"
path = "src/main.rs"
